# syraa-thinkloop

./: .env.example  .gitignore  Dockerfile  GOAL.TXT  LICENSE  README.md  alembic.ini  appointment_service.py  architecture_flow.mmd  calendar_service.py  config.py  database.py  docker-compose.yml  main.py  models.py  patient_service.py  pyproject.toml  reminder_service.py  requirements.txt  utils.py
knowledge_base/: clinic_info.json  manager.py
services/: ai_service.py
